--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,21 +12,16 @@
   box-sizing: border-box;
 }
 
-header {
-  background-color: #adde28;
-  color: #910c55;
-  font-family: cursive;
-  padding-bottom: 5px;
-  border: 5px solid #DE1D87;
-}
-
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.profile-img {
-  width: 200px;
-  
+header {
+  background-color: var(--secodary-color);
+  color: var(--tertiary-color);
+  font-family: cursive;
+  padding-bottom: 5px;
+  border: 5px solid #DE1D87;
 }
 
 header h1 {
@@ -35,9 +30,13 @@ header h1 {
   background-color: gray;
   margin-right: 75%;
   text-align: center;
+  display: inline;
 }
 
-
+.profile-img {
+  width: 200px;
+  
+}
 
 header nav ul {
   display: flex;
@@ -47,9 +46,14 @@ header nav ul {
   list-style: none;
 }
 
+header nav ul li {
+  display: inline;
+}
+
 header nav ul li a {
   text-decoration: none;
-  font-size: 20px;
+  font-size: 22px;
+  margin: 0 30px;
 }
 
 h2 {
@@ -58,6 +62,13 @@ h2 {
   
 }
 
+h3 {
+  font-size: 20px;
+}
+
+.my-work-section h4 {
+  font-size: 15px;
+}
 .about-me-section p {
   background-color: var(--primary-color);
   color: white;
@@ -65,3 +76,19 @@ h2 {
   line-height: 1.5;
   width: 80%;
 }
+
+footer {
+  background-color: var(--secodary-color);
+  color: var(--tertiary-color);
+}
+footer a {
+  text-decoration: none;
+}
+
+section {
+  padding: 80px;
+}
+/* Old CSS CODE!!! */
+
+
+
